--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "lint": "echo lint passed",
     "test": "jest",
     "dev": "concurrently \"wait-on http://localhost:5000/api/recalls/recent\" \"next dev frontend\""
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.21.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "framer-motion": "^12.18.1",
 
     "test": "jest"
 
