--- a/package.json
+++ b/package.json
@@ -5,14 +5,9 @@
   "scripts": {
     "lint": "echo lint passed",
     "test": "jest",
-    "dev": "concurrently \"wait-on http://localhost:5000/api/recalls/recent\" \"next dev frontend\""
-<<<<<<< HEAD
-
-    "test": "jest"
-
-  },
-  "dependencies": {
-=======
+    "dev": "concurrently \"wait-on http://localhost:5000/api/recalls/recent\" \"next dev frontend\"",
+    "analyze": "next build frontend && next-bundle-analyzer",
+    "lhci": "lhci autorun"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
@@ -20,37 +15,30 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.18.1",
->>>>>>> 9ced1687 (Improve recall fetching and add pagination tests)
     "jest-environment-jsdom": "^30.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-table": "^8.5.12",
+    "@tanstack/react-virtual": "^3.0.0",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.1.2",
+    "autoprefixer": "^10.4.17",
     "babel-jest": "^30.0.0",
-<<<<<<< HEAD
-
-=======
->>>>>>> 9ced1687 (Improve recall fetching and add pagination tests)
     "concurrently": "^9.1.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
     "jest": "^30.0.0",
     "jest-environment-jsdom": "^30.0.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.4",
     "wait-on": "^8.0.3"
-<<<<<<< HEAD
-
-    "eslint": "^9.29.0",
-    "eslint-plugin-react": "^7.37.5",
-    "jest": "^30.0.0",
-    "jest-environment-jsdom": "^30.0.0"
-
-=======
->>>>>>> 9ced1687 (Improve recall fetching and add pagination tests)
   }
 }
