--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ PG_DB=recallguard
 ENV=dev
 SENDGRID_API_KEY=
 ALERTS_FROM_EMAIL=noreply@example.com
+JWT_SECRET=change-me
+PG_URL=postgresql+psycopg2://recallguard:recallguard@localhost/recallguard
+FLY_API_TOKEN=
+VERCEL_TOKEN=
+VERCEL_ORG_ID=
+VERCEL_PROJECT_ID=
+
