--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,8 @@ jobs:
         ports: ['5432:5432']
         options: >-
           --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=5
+    env:
+      PG_URL: postgresql+psycopg2://recallguard:recallguard@localhost/recallguard
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
