--- a/requirements.txt
+++ b/requirements.txt
@@ -20,11 +20,15 @@ tiktoken==0.6.0
 tenacity==8.3.0
 pytest==8.2.0
 pytest-asyncio==0.24.0
+pydantic[email]==2.*
+pydantic-settings==2.2.1
 black==24.4.2
 ruff==0.4.5
 isort==5.13.2
 freezegun==1.5.1
+loguru==0.7.2
+prometheus-client==0.20.0
+celery==5.3.6
+sendgrid==6.11.0
+responses==0.25.0
 
-requests
-schedule
-pytest
