Add VIN and FDA recall sources

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ PG_URL=postgresql+psycopg2://recallguard:recallguard@localhost/recallguard
 PG_USER=recallguard
 SENDGRID_API_KEY=
 SLACK_WEBHOOK_URL=
+VIN_DECODER_URL=https://vpic.nhtsa.dot.gov/api/vehicles/DecodeVinValuesExtended/{vin}?format=json
+NHTSA_RECALL_URL=https://api.nhtsa.gov/recalls/recallcampaigns?vin={vin}
 VERCEL_ORG_ID=
 VERCEL_PROJECT_ID=
 VERCEL_TOKEN=
