--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.18.1",
+    "html5-qrcode": "^2.3.8",
     "jest-environment-jsdom": "^30.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
