--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.18.1",
     "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.367.0",
     "jest-environment-jsdom": "^30.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
