--- a/package.json
+++ b/package.json
@@ -41,5 +41,11 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.4",
     "wait-on": "^8.0.3"
-  }
+  },
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "mobile",
+    "shared"
+  ]
 }
