--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.18.1",
     "html5-qrcode": "^2.3.8",
-    "lucide-react": "^0.367.0",
     "jest-environment-jsdom": "^30.0.0",
+    "lucide-react": "^0.367.0",
     "next": "^14.1.0",
+    "next-i18next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1"
